<resources>
    <string name="app_name">OnHand</string>
    <string name="logo">OnHand logo</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="username_icon">Username icon</string>
    <string name="password_icon">Password icon</string>
    <string name="register_text">Don’t have an account? Sign Up</string>
    <string name="name_hint">Name</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="login_text">Already have an account? Sign In</string>
    <string name="name_icon">Name icon</string>
    <string name="type_hint">Type</string>
    <string name="type_icon">Type icon</string>
    <string name="register_button">Register</string>
    <string name="check_in_button">Check-in</string>
    <string name="emergency_button">Emergency</string>
    <string name="share_location_button">Share Location</string>
    <string name="stop_monitoring_button">Stop Monitoring</string>
    <string name="home_button">Home</string>
    <string name="notifications_button">Notifications</string>
    <string name="settings_button">Settings</string>
    <string name="medicine_button">Medicine</string>
    <string name="notifications_switch">Notifications</string>
    <string name="dark_mode_switch">Dark Mode</string>
    <string name="no_users_text">You don’t have users</string>
    <string name="add_users_button_description">Add users button</string>
    <string name="start_monitoring_button">Start Monitoring</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request_checkin_button">Request Checkin</string>
    <string name="view_location_button">View Location</string>
    <string name="no_notifications_text">You don\'t have notifications</string>
    <string name="no_medicine_text">You don\'t have medicine</string>
    <string name="care_receiver_type">Care Receiver</string>
    <string name="care_giver_type">Care Giver</string>

    <!-- NOTIFICATION CHANNELS -->
    <string name="alert_channel_id">ALERT_CHANNEL</string>
    <string name="alert_channel_name">Alert</string>
    <string name="alert_channel_desc">Emergency alert notifications.</string>

    <string name="checkin_channel_id">CHECKIN_CHANNEL</string>
    <string name="checkin_channel_name">CheckIn</string>
    <string name="checkin_channel_desc">Check-in notifications.</string>
    <string name="email_hint">Email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="add_new_user">Add new user</string>
    <string name="add_user">Add user</string>
    <string name="close">Close</string>
    <string name="logout">LogOut</string>
    <string name="location_radius">Location Radius:</string>
    <string name="_12km">12km</string>
    <string name="didn_t_checkin_in_time">Didn\'t checkin in time.</string>

</resources>