<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".screens.activities.care_receiver.HomeCareReceiverActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/check_in_button"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:backgroundTint="@color/green"
                android:elevation="10dp"
                android:text="@string/check_in_button"
                app:icon="@drawable/ic_vector_checkin"
                app:iconGravity="textTop" />

            <Button
                android:id="@+id/emergency_button"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="fill_horizontal"
                android:layout_marginLeft="20dp"
                android:backgroundTint="@color/red"
                android:elevation="10dp"
                android:text="@string/emergency_button"
                app:icon="@drawable/ic_vector_emergency"
                app:iconGravity="textTop" />

        </LinearLayout>

        <Button
            android:id="@+id/share_location_button"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:elevation="10dp"
            android:text="@string/share_location_button"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            app:icon="@drawable/ic_vector_share"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/share_location_button2"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:elevation="10dp"
            android:text="@string/stop_monitoring_button"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            app:icon="@drawable/ic_vector_pause"
            app:iconTint="@color/black" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>